# digimon-world

./: .gitignore  README.md  pyproject.toml  wrangler.jsonc
.cron/: hourly-push.md  run-hour-push.sh
backend/: .gitignore  pyproject.toml  requirements.txt  run.sh
backend/scripts/: analyze_deps.py  coverage.py  generate_figures.py  run_emergence_test.py  stress_test.py  verify_paper_experiment.py  verify_phase1.sh  verify_phase11.py  verify_phase12.py  verify_phase18.py  verify_phase2.py  verify_phase20.py  verify_phase21.py  verify_phase22.py  verify_phase23.py  verify_phase24.py  verify_phase25.py  verify_phase26.py  verify_phase27.py  verify_phase28.py  verify_phase29.py  verify_phase30.py  verify_phase31.py  visualize_paper_experiment.py
backend/src/digimon_world/: tts.py
backend/src/digimon_world/agents/: __init__.py  achievements.py  agent_insights.py  badges.py  breeding.py  chosen_child.py  dialogue.py  digimon_agent.py  evolution.py  healing.py  meme.py  needs.py  plan_persistence.py  planner.py  reflector.py  skills.py
backend/src/digimon_world/api/: __init__.py  almanac.py  app.py  context_health.py  conventions.py  cooperative.py  lineage.py  pokedex.py
backend/src/digimon_world/battle/: __init__.py  damage.py  engine.py  llm_ai.py  sparring.py  types.py
backend/src/digimon_world/economy/: __init__.py  energy_economy.py  knowledge_economy.py
backend/src/digimon_world/llm/: __init__.py  client.py
backend/src/digimon_world/memory/: __init__.py  memory_autonomy.py  memory_stream.py  world_model.py
backend/src/digimon_world/world/: __init__.py  affect_propagation.py  clock.py  context_quality.py  cooperation_thresholds.py  cooperative_tasks.py  dark_gears.py  daynight.py  director_preferences.py  disasters.py  ecology.py  economy.py  egg_incubation.py  emergence_metrics.py  environmental_events.py  events.py  factions.py  festivals.py  interactions.py  items.py  knowledge_economy.py  landmarks.py  lineage.py  multiverse.py  narrative_coherence.py  narrator.py  persistence.py  personality_dynamics.py  personality_engine.py  relational_circle.py  relationships.py  scheduler.py  seasons.py  self_model.py  shared_conventions.py  snapshots.py  theory_of_mind.py  thinking_cost.py  timeline.py  vitality.py  (+3 more)
backend/tests/: test_achievements.py  test_act.py  test_affect_propagation.py  test_agent_insights.py  test_api.py  test_badges.py  test_battle.py  test_battle_api.py  test_breeding.py  test_causality.py  test_chosen_child.py  test_context_quality.py  test_cooperative_scheduling.py  test_cooperative_tasks.py  test_dark_gears.py  test_daynight.py  test_director_preferences.py  test_ecology.py  test_egg_incubation.py  test_emergence.py  test_emergence_validity.py  test_energy_economy.py  test_events.py  test_evolution.py  test_factions.py  test_health.py  test_interactions.py  test_knowledge_economy.py  test_landmarks.py  test_lineage.py  test_llm_client.py  test_meme.py  test_memory_autonomy.py  test_memory_stream.py  test_multiverse.py  test_narrative_coherence.py  test_narrator.py  test_needs.py  test_persistence.py  test_personality_dynamics.py  (+29 more)
docs/: DESIGN.md  (+7 more)
(+45 files in other folders)
